# Mogren

./: CMakeLists.txt
Framework/Animation/: ActionAnimator.cpp  ActionAnimator.h  AnimationController.cpp  AnimationController.h  AnimationFinishEvent.h  AnimationManager.cpp  AnimationManager.h  Animator.cpp  Animator.h  EasingFunctions.cpp  EasingFunctions.h  ParametrizedActionAnimator.cpp  ParametrizedActionAnimator.h
Framework/App/: App.cpp  App.h  Application.cpp  Application.h
Framework/Audio/: Sound.cpp  Sound.h  SoundLoader.cpp  SoundLoader.h  SoundPlayer.cpp  SoundPlayer.h
Framework/Audio/NativeInterface/: NativeAudioInterface.h  NativeSound.h  NativeSoundPlayer.h
Framework/Common/: HierarchyItem.cpp  HierarchyItem.h  ImplementationProvider.h  SceneItem.cpp  SceneItem.h  TimeManager.cpp  TimeManager.h  TouchAction.h  Transformation.cpp  Transformation.h  Transformation2D.cpp  Transformation2D.h  Transformation3D.cpp  Transformation3D.h
Framework/Common/NativeInterface/: NativeCoreInterface.h
Framework/Graphics/: Camera.cpp  Camera.h  CameraProjection.cpp  CameraProjection.h  Geometry.cpp  Geometry.h  IndexBuffer.cpp  IndexBuffer.h  MatrixShaderParameterSetter.h  OrthogonalCameraProjection.cpp  OrthogonalCameraProjection.h  PerspectiveCameraProjection.cpp  PerspectiveCameraProjection.h  RenderTarget.cpp  RenderTarget.h  RenderTargetTexture.cpp  RenderTargetTexture.h  ScalarShaderParameterSetter.cpp  ScalarShaderParameterSetter.h  Shader.cpp  Shader.h  ShaderParameterSetter.cpp  ShaderParameterSetter.h  ShaderParameterSetterFactory.cpp  ShaderParameterSetterFactory.h  ShaderProgram.cpp  ShaderProgram.h  ShaderProgramLoader.cpp  ShaderProgramLoader.h  Texture.cpp  Texture.h  TextureLoader.cpp  TextureLoader.h  Utils.cpp  Utils.h  VectorShaderParameterSetter.h  VertexBuffer.h  VertexBufferBase.cpp  VertexBufferBase.h  VisualSceneItem.cpp  (+1 more)
Framework/Graphics/NativeInterface/: NativeGeometry.h  NativeGraphicsInterface.h  NativeIndexBuffer.h  NativeRenderTarget.h  NativeRenderer.h  NativeShaderParameterSet.h  NativeShaderParameterSetter.h  NativeShaderProgram.h  NativeTexture.h  NativeTextureShaderParameterData.h  NativeVertexBuffer.h
Framework/Graphics/PrimitiveTypes/: Color.cpp  Color.h  GeometryType.h  ShaderParameterType.cpp  ShaderParameterType.h  TextureFilter.h  TextureWrapMode.h  VertexAttributeDesc.cpp  VertexAttributeDesc.h  VertexAttributeType.h  VertexAttributeUsage.h  (+4 more)
Framework/IO/: BinaryReader.cpp  BinaryReader.h  FileStream.cpp  FileStream.h  InputStream.h  MemoryStream.cpp  MemoryStream.h  OutputStream.h  Stream.h  StreamUtils.cpp  StreamUtils.h
Framework/Input/: InputBox.cpp  InputBox.h  InputBoxState.h  InputManager.cpp  InputManager.h  RectangleInputBox.cpp  RectangleInputBox.h  RectangleTouchData.cpp  RectangleTouchData.h  TouchData.cpp  TouchData.h
Framework/Localization/: LocalizedStrings.cpp  LocalizedStrings.h  LocalizedStringsLoader.cpp  LocalizedStringsLoader.h
Framework/Logging/: DebugLogWriter.cpp  DebugLogWriter.h  FileLogger.cpp  FileLogger.h  FunctionLoggingGuard.cpp  FunctionLoggingGuard.h  LogWriter.h  Logger.cpp  Logger.h
Framework/Math/: Functions.h  Matrix.h  Matrix4x4.cpp  Matrix4x4.h  Quaternion.cpp  Quaternion.h  Rectangle.h  Vector.h  Vector2D.h  Vector3D.h  Vector4D.h
Framework/ResourceManagement/: Resource.h  ResourceLoader.h  ResourceManager.cpp  ResourceManager.h
Framework/Settings/: Settings.cpp  Settings.h  SettingsContainer.cpp  SettingsContainer.h
Implementation/Audio.OpenAL/: ALInclude.h  ALSound.cpp  ALSound.h  ALSoundPlayer.cpp  ALSoundPlayer.h  OpenAL.cpp  OpenAL.h  OpenALAudioImpl.cpp  OpenALAudioImpl.h
Implementation/Core.Android/: AndroidCoreImpl.cpp  AndroidCoreImpl.h  EntryPoint.cpp  GLContext.cpp  GLContext.h
Implementation/Core.Linux/: LinuxCoreImpl.cpp  LinuxCoreImpl.h
Implementation/Core.Windows/: WindowsCoreImpl.cpp  WindowsCoreImpl.h
Implementation/EntryPoint.Android/: EntryPoint.cpp
Implementation/EntryPoint.Linux/: EntryPoint.cpp
Implementation/EntryPoint.Windows/: EntryPoint.cpp
Implementation/Graphics.DirectX/: DirectXGeometryImpl.cpp  DirectXGeometryImpl.h  DirectXGraphicsImpl.cpp  DirectXGraphicsImpl.h  DirectXIndexBufferImpl.cpp  DirectXIndexBufferImpl.h  DirectXRenderTargetImpl.cpp  DirectXRenderTargetImpl.h  DirectXRendererImpl.cpp  DirectXRendererImpl.h  DirectXShaderParameterSetImpl.cpp  DirectXShaderParameterSetImpl.h  DirectXShaderParameterSetterImpl.cpp  DirectXShaderParameterSetterImpl.h  DirectXShaderProgramImpl.cpp  DirectXShaderProgramImpl.h  DirectXTextureImpl.cpp  DirectXTextureImpl.h  DirectXVertexBufferImpl.cpp  DirectXVertexBufferImpl.h
Implementation/Graphics.OpenGL/: GLBuffer.cpp  GLBuffer.h  GLFramebuffer.cpp  GLFramebuffer.h  GLInclude.h  GLProgram.cpp  GLProgram.h  GLRenderbuffer.cpp  GLRenderbuffer.h  GLResource.cpp  GLResource.h  GLTexture.cpp  GLTexture.h  GLUtils.cpp  GLUtils.h  IndexBufferImpl.cpp  IndexBufferImpl.h  OpenGLGraphicsImpl.cpp  OpenGLGraphicsImpl.h  RenderTargetImpl.cpp  RenderTargetImpl.h  RenderTargetTextureImpl.cpp  RenderTargetTextureImpl.h  RendererImpl.cpp  RendererImpl.h  ResourcesReloader.cpp  ResourcesReloader.h  ShaderParameterSetImpl.cpp  ShaderParameterSetImpl.h  ShaderParameterSetterImpl.cpp  ShaderParameterSetterImpl.h  ShaderProgramImpl.cpp  ShaderProgramImpl.h  TextureImpl.cpp  TextureImpl.h  VertexBufferImpl.cpp  VertexBufferImpl.h
Implementation/Logging.Android/: AndroidLogWriter.cpp  AndroidLogWriter.h
Implementation/ResourceManagement.Android/: AssetStream.cpp  AssetStream.h  ResourceManagerImpl.cpp  ResourceManagerImpl.h
Implementation/ResourceManagement.Linux/: ResourceManagerImpl.cpp  ResourceManagerImpl.h
Implementation/ResourceManagement.Windows/: ResourceManagerImpl.cpp  ResourceManagerImpl.h
Implementation/Settings.Android/: SettingsImpl.cpp  SettingsImpl.h
Implementation/Settings.Linux/: SettingsImpl.cpp  SettingsImpl.h
Implementation/Settings.Windows/: SettingsImpl.cpp  SettingsImpl.h
Tools/: .gitignore  Tools.sln
Tools/ResCopy/: Mogren.Tools.ResCopy.csproj  Program.cs  attrib.cfg
(+32 files in other folders)
